--- a/alf.conf
+++ b/alf.conf
@@ -2,5 +2,6 @@ g: git
   s: status
   l: log --all --graph --date=relative
   p: push
-fud ='_fud(){ npm run start-funnel:dev -- --p "$1" --l "$2" --d "$3"} _fud'
-fup ='_fud(){ npm run start-funnel:dev -- --p "$1" --l "$2" --d "$3"} _fud'
+
+fud: _fud(){ npm run start-funnel:dev -- --p "$1" --l "$2" --d "$3"} _fud
+fup: _fud(){ npm run start-funnel:dev -- --p "$1" --l "$2" --d "$3"} _fud
