--- a/alf.conf
+++ b/alf.conf
@@ -3,5 +3,5 @@ g: git
   l: log --all --graph --date=relative
   p: push
 
-fud: _fud(){ npm run start-funnel:dev -- --p "$1" --l "$2" --d "$3"} _fud
-fup: _fud(){ npm run start-funnel:dev -- --p "$1" --l "$2" --d "$3"} _fud
+fud: _fud(){ npm run start-funnel:dev -- --p "$1" --l "$2" --d "$3"} _fud;
+fup: _fud(){ npm run start-funnel:dev -- --p "$1" --l "$2" --d "$3"} _fud;
