--- a/alf.conf
+++ b/alf.conf
@@ -3,5 +3,18 @@ g: git
   l: log --all --graph --date=relative
   p: push
 
-fud: _fud(){ npm run start-funnel:dev -- --p "$1" --l "$2" --d "$3"} _fud;
-fup: _fud(){ npm run start-funnel:dev -- --p "$1" --l "$2" --d "$3"} _fud;
+fd: npm run start-funnel:dev -- --p wkda"
+  da: "--l da-DK --d "$3"
+  at: "--l de-AT --d "$3"
+  de: "--l de-DE --d "$3"
+  es: "--l es-ES --d "$3"
+  frbe: "--l fr-BE --d "$3"
+  fr: "--l fr-FR --d "$3"
+  it: "--l it-IT --d "$3"
+  nlbe: "--l nl-BE --d "$3"
+  nl: "--l nl-NL --d "$3"
+  pt: "--l pt-PT --d "$3"
+  sv: "--l sv-SE --d "$3"
+fp: npm run start-funnel:prod -- --p wkda --l "$2" --d "$3"
+wd: npm run start-widget:dev -- --p wkda --l "$2" --d "$3"
+wp: npm run start-widget:prod -- --p wkda --l "$2" --d "$3"
