--- a/alf.conf
+++ b/alf.conf
@@ -4,17 +4,26 @@ g: git
   p: push
 
 fd: npm run start-funnel:dev -- --p wkda
-  da: --l da-DK --d "$2"
-  at: --l de-AT --d "$2"
-  de: --l de-DE --d "$2"
-  es: --l es-ES --d "$2"
-  frbe: --l fr-BE --d "$2"
-  fr: --l fr-FR --d "$2"
-  it: --l it-IT --d "$2"
-  nlbe: --l nl-BE --d "$2"
-  nl: --l nl-NL --d "$2"
-  pt: --l pt-PT --d "$2"
-  sv: --l sv-SE --d "$2"
-fp: npm run start-funnel:prod -- --p wkda --l "$2" --d "$3"
-wd: npm run start-widget:dev -- --p wkda --l "$2" --d "$3"
-wp: npm run start-widget:prod -- --p wkda --l "$2" --d "$3"
+  da: --l da-DK --d "$1"
+  at: --l de-AT --d "$1"
+  de: --l de-DE --d "$1"
+  es: --l es-ES --d "$1"
+  frbe: --l fr-BE --d "$1"
+  fr: --l fr-FR --d "$1"
+  it: --l it-IT --d "$1"
+  nlbe: --l nl-BE --d "$1"
+  nl: --l nl-NL --d "$1"
+  pt: --l pt-PT --d "$1"
+  sv: --l sv-SE --d "$1"
+fp: npm run start-funnel:prod -- --p wkda
+  da: --l da-DK --d "$1"
+  at: --l de-AT --d "$1"
+  de: --l de-DE --d "$1"
+  es: --l es-ES --d "$1"
+  frbe: --l fr-BE --d "$1"
+  fr: --l fr-FR --d "$1"
+  it: --l it-IT --d "$1"
+  nlbe: --l nl-BE --d "$1"
+  nl: --l nl-NL --d "$1"
+  pt: --l pt-PT --d "$1"
+  sv: --l sv-SE --d "$1"
